what a fucking mess

--- a/ENIGMAsystem/SHELL/Bridges/xlib-OpenGL1/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/xlib-OpenGL1/Makefile
@@ -1,1 +1,1 @@
-SOURCES += $(wildcard Bridges/xlib-OpenGL1/*.cpp)
+SOURCES += Bridges/General/Bridges.cpp Bridges/General/OpenGL.cpp $(wildcard Bridges/xlib-OpenGL1/*.cpp)
