move screen_refresh and display_reset for ogl3

--- a/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL3/Makefile
@@ -1,1 +1,1 @@
-SOURCES += $(wildcard Bridges/Win32-OpenGL3/*.cpp)
+SOURCES += Bridges/General/Bridges.cpp Bridges/General/OpenGL.cpp $(wildcard Bridges/Win32-OpenGL3/*.cpp)
