--- a/ENIGMAsystem/SHELL/Bridges/xlib-OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/xlib-OpenGL3/Makefile
@@ -1,1 +1,1 @@
-SOURCES += $(wildcard Bridges/xlib-OpenGL3/*.cpp)
+SOURCES += Bridges/General/Bridges.cpp Bridges/General/OpenGL.cpp $(wildcard Bridges/xlib-OpenGL3/*.cpp)
