move set_synchronization to Win32-OpenGL.cpp

--- a/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL1/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL1/Makefile
@@ -1,1 +1,1 @@
-SOURCES += Bridges/General/Bridges.cpp Bridges/General/OpenGL.cpp $(wildcard Bridges/Win32-OpenGL1/*.cpp)
+SOURCES += Bridges/General/Bridges.cpp Bridges/General/OpenGL.cpp Bridges/General/Win32-OpenGL.cpp $(wildcard Bridges/Win32-OpenGL1/*.cpp)
